2011-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Check the existence of the user's mail
	spool before trying to remove it. If it does not exist, a warning
	is issued, but no failure.

2011-06-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/sulogin.c: Added Prog, needed because of the last xmalloc()
	change.

2011-06-03  Nicolas François  <nicolas.francois@centraliens.net>

	* man/zh_CN/, man/zh_CN/Makefile.am: Added directory, and zh_CN
	Makefile.
	* man/Makefile.am: Build zh_CN pages.
	* man/generate_translations.mak: Add config.xml to CLEANFILES.
	* man/po/zh_CN.po: limits, groups, faillog, expiry should not be
	translated (command name, file name), also this broke the build
	system as they are used to derive manpage names.

2011-06-02  Peter Vrabec  <pvrabec@redhat.com>

	* src/lastlog.c, src/faillog.c: Fix underflows causing wrong entry
	to be displayed.

2011-06-02  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/xmalloc.c: Harmonize message.

2011-06-02  Peter Vrabec  <pvrabec@redhat.com>

	* libmisc/find_new_uid.c, libmisc/find_new_gid.c: Add missing
	memory allocation check.

2011-06-02  Cal Peake  <cp@absolutedigital.net>

	* NEWS, libmisc/addgrps.c: Fix allocator loop. Continue to
	getgroups() when getgroups fails (-1) with errno==EINVAL.

2011-06-01  Simon Brandmair  <sbrandmair@gmx.net>

	* man/newusers.8.xml, man/suauth.5.xml, man/suauth.5.xml,
	  man/logoutd.8.xml, man/chgpasswd.8.xml, man/groups.1.xml,
	  man/faillog.5.xml, man/login.defs.d/MD5_CRYPT_ENAB.xml,
	  man/login.defs.d/DEFAULT_HOME.xml,
	  man/login.defs.d/LOGIN_RETRIES.xml,
	  man/login.defs.d/MD5_CRYPT_ENAB.xml,
	  man/login.defs.d/PORTTIME_CHECKS_ENAB.xml, 
	  man/login.defs.d/SHA_CRYPT_MIN_ROUNDS.xml:
	  Fix typos
	* man/po/de.po: German translation of manpages completed

2011-05-23  Innocent De Marchi  <tangram.peces@gmail.com>

	* po/ca.po: Catalan translation completed
